Updates to dominate forest type model

--- a/Aim2/code/Python/05a_TreeMap_Forest-Composition.ipynb
+++ b/Aim2/code/Python/05a_TreeMap_Forest-Composition.ipynb
@@ -211,7 +211,8 @@
       "FORTYPCD columns:\n",
       "Index(['Unnamed: 0', 'grid_idx', 'fortypnm_gp', 'fortyp_pixels',\n",
       "       'total_pixels', 'fortyp_pct', 'forest_pixels', 'forest_pct',\n",
-      "       'canopypct_mean', 'balive_sum'],\n",
+      "       'canopypct_mean', 'balive_sum', 'lf_forest_cc_mean',\n",
+      "       'lf_forest_ch_mean'],\n",
       "      dtype='object')\n",
       "\n",
       "Tree Table columns:\n",
@@ -235,7 +236,7 @@
     "# Load the FORTYPCD and the Tree Table summaries\n",
     "\n",
     "# FORTYPCD\n",
-    "fp = os.path.join(projdir,'data/tabular/mod/gridstats_fortypnm_gp.csv')\n",
+    "fp = os.path.join(projdir,'data/tabular/mod/gridstats_fortypnm_gp_fc.csv')\n",
     "fortyp = pd.read_csv(fp)\n",
     "print(f\"FORTYPCD columns:\\n{fortyp.columns}\\n\")\n",
     "\n",
@@ -302,7 +303,7 @@
      "data": {
       "text/plain": [
        "Index(['grid_idx', 'fortypnm_gp', 'fortyp_pct', 'forest_pct', 'canopypct_mean',\n",
-       "       'balive_sum'],\n",
+       "       'balive_sum', 'lf_forest_cc_mean', 'lf_forest_ch_mean'],\n",
        "      dtype='object')"
       ]
      },
@@ -316,7 +317,8 @@
     "dfortyp = fortyp.loc[fortyp.groupby('grid_idx')['fortyp_pct'].idxmax()]\n",
     "dfortyp = dfortyp[[\n",
     "    'grid_idx','fortypnm_gp','fortyp_pct',\n",
-    "    'forest_pct','canopypct_mean','balive_sum'\n",
+    "    'forest_pct','canopypct_mean','balive_sum',\n",
+    "    'lf_forest_cc_mean', 'lf_forest_ch_mean'\n",
     "]]\n",
     "dfortyp = dfortyp[dfortyp['grid_idx'].isin(trees['grid_idx'].unique())] # retain matching grids\n",
     "dfortyp.columns"
@@ -417,10 +419,10 @@
        "      <th>forest_pct</th>\n",
        "      <th>canopypct_mean</th>\n",
        "      <th>balive_sum</th>\n",
+       "      <th>lf_forest_cc_mean</th>\n",
+       "      <th>lf_forest_ch_mean</th>\n",
        "      <th>species_gp_n</th>\n",
        "      <th>tmid_n</th>\n",
-       "      <th>ba_live</th>\n",
-       "      <th>ba_dead</th>\n",
        "      <th>...</th>\n",
        "      <th>tpp_live_total</th>\n",
        "      <th>tpp_dead_total</th>\n",
@@ -443,10 +445,10 @@
        "      <td>40.10989</td>\n",
        "      <td>41.287671</td>\n",
        "      <td>5058.04834</td>\n",
+       "      <td>15.741758</td>\n",
+       "      <td>62.362637</td>\n",
        "      <td>Douglas-fir</td>\n",
        "      <td>8</td>\n",
-       "      <td>4474.224525</td>\n",
-       "      <td>926.111311</td>\n",
        "      <td>...</td>\n",
        "      <td>2127.67757</td>\n",
        "      <td>270.575649</td>\n",
@@ -467,10 +469,10 @@
        "      <td>40.10989</td>\n",
        "      <td>41.287671</td>\n",
        "      <td>5058.04834</td>\n",
+       "      <td>15.741758</td>\n",
+       "      <td>62.362637</td>\n",
        "      <td>Gambel oak</td>\n",
        "      <td>4</td>\n",
-       "      <td>1929.142456</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
        "      <td>2127.67757</td>\n",
        "      <td>270.575649</td>\n",
@@ -491,10 +493,10 @@
        "      <td>40.10989</td>\n",
        "      <td>41.287671</td>\n",
        "      <td>5058.04834</td>\n",
+       "      <td>15.741758</td>\n",
+       "      <td>62.362637</td>\n",
        "      <td>Lodgepole pine</td>\n",
        "      <td>2</td>\n",
-       "      <td>1936.529934</td>\n",
-       "      <td>337.602283</td>\n",
        "      <td>...</td>\n",
        "      <td>2127.67757</td>\n",
        "      <td>270.575649</td>\n",
@@ -515,10 +517,10 @@
        "      <td>40.10989</td>\n",
        "      <td>41.287671</td>\n",
        "      <td>5058.04834</td>\n",
+       "      <td>15.741758</td>\n",
+       "      <td>62.362637</td>\n",
        "      <td>Piñon-juniper</td>\n",
        "      <td>2</td>\n",
-       "      <td>5992.310479</td>\n",
-       "      <td>202.727454</td>\n",
        "      <td>...</td>\n",
        "      <td>2127.67757</td>\n",
        "      <td>270.575649</td>\n",
@@ -539,10 +541,10 @@
        "      <td>40.10989</td>\n",
        "      <td>41.287671</td>\n",
        "      <td>5058.04834</td>\n",
+       "      <td>15.741758</td>\n",
+       "      <td>62.362637</td>\n",
        "      <td>Quaking aspen</td>\n",
        "      <td>18</td>\n",
-       "      <td>28632.045742</td>\n",
-       "      <td>11532.370798</td>\n",
        "      <td>...</td>\n",
        "      <td>2127.67757</td>\n",
        "      <td>270.575649</td>\n",
@@ -557,7 +559,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 35 columns</p>\n",
+       "<p>5 rows × 37 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -568,19 +570,19 @@
        "3    819725  Quaking aspen    0.302198    40.10989       41.287671   \n",
        "4    819725  Quaking aspen    0.302198    40.10989       41.287671   \n",
        "\n",
-       "   balive_sum    species_gp_n  tmid_n       ba_live       ba_dead  ...  \\\n",
-       "0  5058.04834     Douglas-fir       8   4474.224525    926.111311  ...   \n",
-       "1  5058.04834      Gambel oak       4   1929.142456      0.000000  ...   \n",
-       "2  5058.04834  Lodgepole pine       2   1936.529934    337.602283  ...   \n",
-       "3  5058.04834   Piñon-juniper       2   5992.310479    202.727454  ...   \n",
-       "4  5058.04834   Quaking aspen      18  28632.045742  11532.370798  ...   \n",
+       "   balive_sum  lf_forest_cc_mean  lf_forest_ch_mean    species_gp_n  tmid_n  \\\n",
+       "0  5058.04834          15.741758          62.362637     Douglas-fir       8   \n",
+       "1  5058.04834          15.741758          62.362637      Gambel oak       4   \n",
+       "2  5058.04834          15.741758          62.362637  Lodgepole pine       2   \n",
+       "3  5058.04834          15.741758          62.362637   Piñon-juniper       2   \n",
+       "4  5058.04834          15.741758          62.362637   Quaking aspen      18   \n",
        "\n",
-       "   tpp_live_total  tpp_dead_total  qmd_live_mean  qmd_dead_mean  \\\n",
-       "0      2127.67757      270.575649      88.343982      59.839315   \n",
-       "1      2127.67757      270.575649      88.343982      59.839315   \n",
-       "2      2127.67757      270.575649      88.343982      59.839315   \n",
-       "3      2127.67757      270.575649      88.343982      59.839315   \n",
-       "4      2127.67757      270.575649      88.343982      59.839315   \n",
+       "   ...  tpp_live_total  tpp_dead_total  qmd_live_mean  qmd_dead_mean  \\\n",
+       "0  ...      2127.67757      270.575649      88.343982      59.839315   \n",
+       "1  ...      2127.67757      270.575649      88.343982      59.839315   \n",
+       "2  ...      2127.67757      270.575649      88.343982      59.839315   \n",
+       "3  ...      2127.67757      270.575649      88.343982      59.839315   \n",
+       "4  ...      2127.67757      270.575649      88.343982      59.839315   \n",
        "\n",
        "   tree_ht_live_mean  tree_ht_dead_mean  tree_dia_live_mean  \\\n",
        "0          33.567869          22.728869            8.124283   \n",
@@ -596,7 +598,7 @@
        "3            8.124283    0.104165     0.059308  \n",
        "4            8.124283    0.497716     0.452034  \n",
        "\n",
-       "[5 rows x 35 columns]"
+       "[5 rows x 37 columns]"
       ]
      },
      "execution_count": 10,
@@ -638,11 +640,12 @@
      "data": {
       "text/plain": [
        "Index(['grid_idx', 'fortypnm_gp', 'fortyp_pct', 'forest_pct', 'canopypct_mean',\n",
-       "       'balive_sum', 'species_gp_n', 'tmid_n', 'ba_live', 'ba_dead', 'ba_ld',\n",
-       "       'tpp_live', 'tpp_dead', 'tpp_ld', 'qmd_live', 'qmd_dead', 'qmd_ld',\n",
-       "       'tree_ht_live', 'tree_ht_dead', 'tree_dia_live', 'tree_dia_dead',\n",
-       "       'H_ba', 'H_tpp', 'ba_live_total', 'ba_dead_total', 'tpp_live_total',\n",
-       "       'tpp_dead_total', 'qmd_live_mean', 'qmd_dead_mean', 'tree_ht_live_mean',\n",
+       "       'balive_sum', 'lf_forest_cc_mean', 'lf_forest_ch_mean', 'species_gp_n',\n",
+       "       'tmid_n', 'ba_live', 'ba_dead', 'ba_ld', 'tpp_live', 'tpp_dead',\n",
+       "       'tpp_ld', 'qmd_live', 'qmd_dead', 'qmd_ld', 'tree_ht_live',\n",
+       "       'tree_ht_dead', 'tree_dia_live', 'tree_dia_dead', 'H_ba', 'H_tpp',\n",
+       "       'ba_live_total', 'ba_dead_total', 'tpp_live_total', 'tpp_dead_total',\n",
+       "       'qmd_live_mean', 'qmd_dead_mean', 'tree_ht_live_mean',\n",
        "       'tree_ht_dead_mean', 'tree_dia_live_mean', 'tree_dia_dead_mean',\n",
        "       'ba_live_pr', 'tpp_live_pr'],\n",
        "      dtype='object')"
@@ -778,35 +781,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "20c1b7fd-0346-4302-aa26-5c540cd9f2a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['grid_idx', 'fortypnm_gp', 'fortyp_pct', 'forest_pct', 'canopypct_mean',\n",
-       "       'balive_sum', 'species_gp_n', 'tmid_n', 'ba_live', 'ba_dead', 'ba_ld',\n",
-       "       'tpp_live', 'tpp_dead', 'tpp_ld', 'qmd_live', 'qmd_dead', 'qmd_ld',\n",
-       "       'tree_ht_live', 'tree_ht_dead', 'tree_dia_live', 'tree_dia_dead',\n",
-       "       'H_ba', 'H_tpp', 'ba_live_total', 'ba_dead_total', 'tpp_live_total',\n",
-       "       'tpp_dead_total', 'qmd_live_mean', 'qmd_dead_mean', 'tree_ht_live_mean',\n",
-       "       'tree_ht_dead_mean', 'tree_dia_live_mean', 'tree_dia_dead_mean',\n",
-       "       'ba_live_pr', 'tpp_live_pr'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tree_metrics.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
    "id": "8be34775-a3e3-49cb-857f-04283eda9d25",
    "metadata": {},
    "outputs": [
@@ -819,22 +793,22 @@
       "1    819725  Quaking aspen    0.302198    40.10989       41.287671   \n",
       "2    819725  Quaking aspen    0.302198    40.10989       41.287671   \n",
       "\n",
-      "   balive_sum    species_gp_n  tmid_n      ba_live     ba_dead  ...  \\\n",
-      "0  5058.04834     Douglas-fir       8  4474.224525  926.111311  ...   \n",
-      "1  5058.04834      Gambel oak       4  1929.142456    0.000000  ...   \n",
-      "2  5058.04834  Lodgepole pine       2  1936.529934  337.602283  ...   \n",
+      "   balive_sum  lf_forest_cc_mean  lf_forest_ch_mean    species_gp_n  tmid_n  \\\n",
+      "0  5058.04834          15.741758          62.362637     Douglas-fir       8   \n",
+      "1  5058.04834          15.741758          62.362637      Gambel oak       4   \n",
+      "2  5058.04834          15.741758          62.362637  Lodgepole pine       2   \n",
       "\n",
-      "         tmmx   tmmx_dv       vpd    vpd_dv        vs     vs_dv         elev  \\\n",
-      "0  297.936441  3.825737  1.632481  0.434491  3.350589 -0.701609  2907.785585   \n",
-      "1  297.936441  3.825737  1.632481  0.434491  3.350589 -0.701609  2907.785585   \n",
-      "2  297.936441  3.825737  1.632481  0.434491  3.350589 -0.701609  2907.785585   \n",
+      "   ...        tmmx   tmmx_dv       vpd    vpd_dv        vs     vs_dv  \\\n",
+      "0  ...  297.936441  3.825737  1.632481  0.434491  3.350589 -0.701609   \n",
+      "1  ...  297.936441  3.825737  1.632481  0.434491  3.350589 -0.701609   \n",
+      "2  ...  297.936441  3.825737  1.632481  0.434491  3.350589 -0.701609   \n",
       "\n",
-      "       slope       chili        tpi  \n",
-      "0  27.233212  189.301124  27.759364  \n",
-      "1  27.233212  189.301124  27.759364  \n",
-      "2  27.233212  189.301124  27.759364  \n",
+      "          elev      slope       chili        tpi  \n",
+      "0  2907.785585  27.233212  189.301124  27.759364  \n",
+      "1  2907.785585  27.233212  189.301124  27.759364  \n",
+      "2  2907.785585  27.233212  189.301124  27.759364  \n",
       "\n",
-      "[3 rows x 96 columns]\n"
+      "[3 rows x 98 columns]\n"
      ]
     }
    ],
@@ -847,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "8b900f17-c082-4c38-9133-2bc4f828ab5d",
    "metadata": {},
    "outputs": [
@@ -857,13 +831,54 @@
        "219408"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(grid_tm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f743c481-7181-4909-87aa-809ddcbc54fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['grid_idx', 'fortypnm_gp', 'fortyp_pct', 'forest_pct', 'canopypct_mean',\n",
+       "       'balive_sum', 'lf_forest_cc_mean', 'lf_forest_ch_mean', 'species_gp_n',\n",
+       "       'tmid_n', 'ba_live', 'ba_dead', 'ba_ld', 'tpp_live', 'tpp_dead',\n",
+       "       'tpp_ld', 'qmd_live', 'qmd_dead', 'qmd_ld', 'tree_ht_live',\n",
+       "       'tree_ht_dead', 'tree_dia_live', 'tree_dia_dead', 'H_ba', 'H_tpp',\n",
+       "       'ba_live_total', 'ba_dead_total', 'tpp_live_total', 'tpp_dead_total',\n",
+       "       'qmd_live_mean', 'qmd_dead_mean', 'tree_ht_live_mean',\n",
+       "       'tree_ht_dead_mean', 'tree_dia_live_mean', 'tree_dia_dead_mean',\n",
+       "       'ba_live_pr', 'tpp_live_pr', 'grid_index', 'grid_area', 'afd_count',\n",
+       "       'unique_days', 'overlap', 'frp_csum', 'frp_max', 'frp_min', 'frp_mean',\n",
+       "       'frp_p90', 'frp_p95', 'frp_p97', 'frp_p99', 'frp_first', 'day_max_frp',\n",
+       "       'dt_max_frp', 'first_obs_date', 'last_obs_date', 't4_max', 't4_mean',\n",
+       "       't5_max', 't5_mean', 'day_count', 'night_count', 'frp_max_day',\n",
+       "       'frp_max_night', 'frp_csum_day', 'frp_csum_night', 'frp_mean_day',\n",
+       "       'frp_mean_night', 'frp_p90_day', 'frp_p90_night', 'frp_p95_day',\n",
+       "       'frp_p95_night', 'frp_p97_day', 'frp_p97_night', 'frp_p99_day',\n",
+       "       'frp_p99_night', 'frp_first_day', 'frp_first_night', 'Fire_ID',\n",
+       "       'Fire_Name', 'geometry', 'x', 'y', 'erc', 'erc_dv', 'fm1000',\n",
+       "       'fm1000_dv', 'rmin', 'rmin_dv', 'tmmx', 'tmmx_dv', 'vpd', 'vpd_dv',\n",
+       "       'vs', 'vs_dv', 'elev', 'slope', 'chili', 'tpi'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_tm.columns"
    ]
   },
   {
