Updates to INLA models: forest composition and structure

--- a/Aim3/code/04fireshed-aggregations.ipynb
+++ b/Aim3/code/04fireshed-aggregations.ipynb
@@ -953,7 +953,7 @@
       "8    21025        1   8995       1098901   0.818545\n",
       "10   21247        1  43309        970381   4.463092\n",
       "\n",
-      "Total elapsed time: 0.53 minutes.\n",
+      "Total elapsed time: 0.69 minutes.\n",
       "\n",
       "\n",
       "~~~~~~~~~~\n",
@@ -1075,11 +1075,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "72fb2d80-1922-462c-969e-1b5cf0a6134d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>number_of_patches</th>\n",
+       "      <th>patch_density</th>\n",
+       "      <th>largest_patch_index</th>\n",
+       "      <th>sfs_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>86</td>\n",
+       "      <td>3.815372</td>\n",
+       "      <td>0.095384</td>\n",
+       "      <td>20467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.088730</td>\n",
+       "      <td>68.277848</td>\n",
+       "      <td>20467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1941</td>\n",
+       "      <td>54.625124</td>\n",
+       "      <td>2.078062</td>\n",
+       "      <td>20469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.056286</td>\n",
+       "      <td>59.755270</td>\n",
+       "      <td>20469</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1147</td>\n",
+       "      <td>34.018549</td>\n",
+       "      <td>2.622127</td>\n",
+       "      <td>21247</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  number_of_patches  patch_density  largest_patch_index  sfs_id\n",
+       "0           0                 86       3.815372             0.095384   20467\n",
+       "1           1                  2       0.088730            68.277848   20467\n",
+       "2           2               1941      54.625124             2.078062   20469\n",
+       "3           3                  2       0.056286            59.755270   20469\n",
+       "4           4               1147      34.018549             2.622127   21247"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load the patch metrics and join in\n",
+    "fp = os.path.join(projdir,'Aim3/data/tabular/firesheds_aspen10_patches.csv')\n",
+    "patches = pd.read_csv(fp)\n",
+    "patches.head()"
+   ]
   },
   {
    "cell_type": "code",
