--- a/Aim2/code/Python/05a_TreeMap_Forest-Composition.ipynb
+++ b/Aim2/code/Python/05a_TreeMap_Forest-Composition.ipynb
@@ -671,8 +671,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Index(['system:index', 'Fire_ID', 'chili', 'elev', 'grid_index', 'slope',\n",
-      "       'tpi', '.geo', 'grid_idx'],\n",
+      "Index(['system:index', 'Fire_ID', 'aspect', 'chili', 'elev', 'grid_index',\n",
+      "       'slope', 'tpi', '.geo', 'grid_idx'],\n",
       "      dtype='object')\n",
       "\n",
       "\n",
@@ -762,7 +762,7 @@
        "       'frp_first_day', 'frp_first_night', 'Fire_ID', 'Fire_Name', 'geometry',\n",
        "       'grid_idx', 'x', 'y', 'erc', 'erc_dv', 'fm1000', 'fm1000_dv', 'rmin',\n",
        "       'rmin_dv', 'tmmx', 'tmmx_dv', 'vpd', 'vpd_dv', 'vs', 'vs_dv', 'elev',\n",
-       "       'slope', 'chili', 'tpi'],\n",
+       "       'slope', 'aspect', 'chili', 'tpi'],\n",
        "      dtype='object')"
       ]
      },
@@ -773,7 +773,7 @@
    ],
    "source": [
     "# merge the topography to the grid\n",
-    "topo = topo[['grid_idx', 'elev', 'slope', 'chili', 'tpi']]\n",
+    "topo = topo[['grid_idx', 'elev', 'slope', 'aspect', 'chili', 'tpi']]\n",
     "grid_clim_topo = grid_clim.merge(topo, on='grid_idx', how='left')\n",
     "grid_clim_topo.columns"
    ]
@@ -798,17 +798,17 @@
       "1  5058.04834          15.741758          62.362637      Gambel oak       4   \n",
       "2  5058.04834          15.741758          62.362637  Lodgepole pine       2   \n",
       "\n",
-      "   ...        tmmx   tmmx_dv       vpd    vpd_dv        vs     vs_dv  \\\n",
-      "0  ...  297.936441  3.825737  1.632481  0.434491  3.350589 -0.701609   \n",
-      "1  ...  297.936441  3.825737  1.632481  0.434491  3.350589 -0.701609   \n",
-      "2  ...  297.936441  3.825737  1.632481  0.434491  3.350589 -0.701609   \n",
+      "   ...   tmmx_dv       vpd    vpd_dv        vs     vs_dv         elev  \\\n",
+      "0  ...  3.825737  1.632481  0.434491  3.350589 -0.701609  2907.785585   \n",
+      "1  ...  3.825737  1.632481  0.434491  3.350589 -0.701609  2907.785585   \n",
+      "2  ...  3.825737  1.632481  0.434491  3.350589 -0.701609  2907.785585   \n",
       "\n",
-      "          elev      slope       chili        tpi  \n",
-      "0  2907.785585  27.233212  189.301124  27.759364  \n",
-      "1  2907.785585  27.233212  189.301124  27.759364  \n",
-      "2  2907.785585  27.233212  189.301124  27.759364  \n",
+      "       slope      aspect       chili        tpi  \n",
+      "0  27.233212  143.266123  189.301124  27.759364  \n",
+      "1  27.233212  143.266123  189.301124  27.759364  \n",
+      "2  27.233212  143.266123  189.301124  27.759364  \n",
       "\n",
-      "[3 rows x 98 columns]\n"
+      "[3 rows x 99 columns]\n"
      ]
     }
    ],
@@ -868,7 +868,7 @@
        "       'frp_p99_night', 'frp_first_day', 'frp_first_night', 'Fire_ID',\n",
        "       'Fire_Name', 'geometry', 'x', 'y', 'erc', 'erc_dv', 'fm1000',\n",
        "       'fm1000_dv', 'rmin', 'rmin_dv', 'tmmx', 'tmmx_dv', 'vpd', 'vpd_dv',\n",
-       "       'vs', 'vs_dv', 'elev', 'slope', 'chili', 'tpi'],\n",
+       "       'vs', 'vs_dv', 'elev', 'slope', 'aspect', 'chili', 'tpi'],\n",
        "      dtype='object')"
       ]
      },
