Fixed QMD calculation ... updates to R-INLA models

--- a/Aim2/code/Python/05a_TreeMap_Forest-Composition.ipynb
+++ b/Aim2/code/Python/05a_TreeMap_Forest-Composition.ipynb
@@ -217,12 +217,12 @@
       "\n",
       "Tree Table columns:\n",
       "Index(['grid_idx', 'species_gp_n', 'tmid_n', 'ba_live', 'ba_dead', 'ba_ld',\n",
-      "       'tpp_live', 'tpp_dead', 'tpp_ld', 'qmd_live', 'qmd_dead', 'qmd_ld',\n",
-      "       'tree_ht_live', 'tree_ht_dead', 'tree_dia_live', 'tree_dia_dead',\n",
-      "       'H_ba', 'H_tpp', 'ba_live_total', 'ba_dead_total', 'tpp_live_total',\n",
-      "       'tpp_dead_total', 'qmd_live_mean', 'qmd_dead_mean', 'tree_ht_live_mean',\n",
-      "       'tree_ht_dead_mean', 'tree_dia_live_mean', 'tree_dia_dead_mean',\n",
-      "       'ba_live_pr', 'tpp_live_pr'],\n",
+      "       'tpp_live', 'tpp_dead', 'tpp_ld', 'tree_ht_live', 'tree_ht_dead',\n",
+      "       'tree_dia_live', 'tree_dia_dead', 'H_ba', 'H_tpp', 'qmd_live',\n",
+      "       'ba_live_total', 'ba_dead_total', 'tpp_live_total', 'tpp_dead_total',\n",
+      "       'qmd_live_mean', 'tree_ht_live_mean', 'tree_ht_dead_mean',\n",
+      "       'tree_dia_live_mean', 'tree_dia_dead_mean', 'ba_live_pr',\n",
+      "       'tpp_live_pr'],\n",
       "      dtype='object')\n",
       "\n",
       "\tFORTYP unique grids: 44312\n",
@@ -424,10 +424,10 @@
        "      <th>species_gp_n</th>\n",
        "      <th>tmid_n</th>\n",
        "      <th>...</th>\n",
+       "      <th>ba_dead_total</th>\n",
        "      <th>tpp_live_total</th>\n",
        "      <th>tpp_dead_total</th>\n",
        "      <th>qmd_live_mean</th>\n",
-       "      <th>qmd_dead_mean</th>\n",
        "      <th>tree_ht_live_mean</th>\n",
        "      <th>tree_ht_dead_mean</th>\n",
        "      <th>tree_dia_live_mean</th>\n",
@@ -450,10 +450,10 @@
        "      <td>Douglas-fir</td>\n",
        "      <td>8</td>\n",
        "      <td>...</td>\n",
+       "      <td>116.311383</td>\n",
        "      <td>2127.67757</td>\n",
        "      <td>270.575649</td>\n",
-       "      <td>88.343982</td>\n",
-       "      <td>59.839315</td>\n",
+       "      <td>6.338102</td>\n",
        "      <td>33.567869</td>\n",
        "      <td>22.728869</td>\n",
        "      <td>8.124283</td>\n",
@@ -474,10 +474,10 @@
        "      <td>Gambel oak</td>\n",
        "      <td>4</td>\n",
        "      <td>...</td>\n",
+       "      <td>116.311383</td>\n",
        "      <td>2127.67757</td>\n",
        "      <td>270.575649</td>\n",
-       "      <td>88.343982</td>\n",
-       "      <td>59.839315</td>\n",
+       "      <td>6.338102</td>\n",
        "      <td>33.567869</td>\n",
        "      <td>22.728869</td>\n",
        "      <td>8.124283</td>\n",
@@ -498,10 +498,10 @@
        "      <td>Lodgepole pine</td>\n",
        "      <td>2</td>\n",
        "      <td>...</td>\n",
+       "      <td>116.311383</td>\n",
        "      <td>2127.67757</td>\n",
        "      <td>270.575649</td>\n",
-       "      <td>88.343982</td>\n",
-       "      <td>59.839315</td>\n",
+       "      <td>6.338102</td>\n",
        "      <td>33.567869</td>\n",
        "      <td>22.728869</td>\n",
        "      <td>8.124283</td>\n",
@@ -522,10 +522,10 @@
        "      <td>Piñon-juniper</td>\n",
        "      <td>2</td>\n",
        "      <td>...</td>\n",
+       "      <td>116.311383</td>\n",
        "      <td>2127.67757</td>\n",
        "      <td>270.575649</td>\n",
-       "      <td>88.343982</td>\n",
-       "      <td>59.839315</td>\n",
+       "      <td>6.338102</td>\n",
        "      <td>33.567869</td>\n",
        "      <td>22.728869</td>\n",
        "      <td>8.124283</td>\n",
@@ -546,10 +546,10 @@
        "      <td>Quaking aspen</td>\n",
        "      <td>18</td>\n",
        "      <td>...</td>\n",
+       "      <td>116.311383</td>\n",
        "      <td>2127.67757</td>\n",
        "      <td>270.575649</td>\n",
-       "      <td>88.343982</td>\n",
-       "      <td>59.839315</td>\n",
+       "      <td>6.338102</td>\n",
        "      <td>33.567869</td>\n",
        "      <td>22.728869</td>\n",
        "      <td>8.124283</td>\n",
@@ -559,7 +559,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 37 columns</p>\n",
+       "<p>5 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -577,12 +577,12 @@
        "3  5058.04834          15.741758          62.362637   Piñon-juniper       2   \n",
        "4  5058.04834          15.741758          62.362637   Quaking aspen      18   \n",
        "\n",
-       "   ...  tpp_live_total  tpp_dead_total  qmd_live_mean  qmd_dead_mean  \\\n",
-       "0  ...      2127.67757      270.575649      88.343982      59.839315   \n",
-       "1  ...      2127.67757      270.575649      88.343982      59.839315   \n",
-       "2  ...      2127.67757      270.575649      88.343982      59.839315   \n",
-       "3  ...      2127.67757      270.575649      88.343982      59.839315   \n",
-       "4  ...      2127.67757      270.575649      88.343982      59.839315   \n",
+       "   ...  ba_dead_total  tpp_live_total  tpp_dead_total  qmd_live_mean  \\\n",
+       "0  ...     116.311383      2127.67757      270.575649       6.338102   \n",
+       "1  ...     116.311383      2127.67757      270.575649       6.338102   \n",
+       "2  ...     116.311383      2127.67757      270.575649       6.338102   \n",
+       "3  ...     116.311383      2127.67757      270.575649       6.338102   \n",
+       "4  ...     116.311383      2127.67757      270.575649       6.338102   \n",
        "\n",
        "   tree_ht_live_mean  tree_ht_dead_mean  tree_dia_live_mean  \\\n",
        "0          33.567869          22.728869            8.124283   \n",
@@ -598,7 +598,7 @@
        "3            8.124283    0.104165     0.059308  \n",
        "4            8.124283    0.497716     0.452034  \n",
        "\n",
-       "[5 rows x 37 columns]"
+       "[5 rows x 34 columns]"
       ]
      },
      "execution_count": 10,
@@ -642,12 +642,11 @@
        "Index(['grid_idx', 'fortypnm_gp', 'fortyp_pct', 'forest_pct', 'canopypct_mean',\n",
        "       'balive_sum', 'lf_forest_cc_mean', 'lf_forest_ch_mean', 'species_gp_n',\n",
        "       'tmid_n', 'ba_live', 'ba_dead', 'ba_ld', 'tpp_live', 'tpp_dead',\n",
-       "       'tpp_ld', 'qmd_live', 'qmd_dead', 'qmd_ld', 'tree_ht_live',\n",
-       "       'tree_ht_dead', 'tree_dia_live', 'tree_dia_dead', 'H_ba', 'H_tpp',\n",
-       "       'ba_live_total', 'ba_dead_total', 'tpp_live_total', 'tpp_dead_total',\n",
-       "       'qmd_live_mean', 'qmd_dead_mean', 'tree_ht_live_mean',\n",
-       "       'tree_ht_dead_mean', 'tree_dia_live_mean', 'tree_dia_dead_mean',\n",
-       "       'ba_live_pr', 'tpp_live_pr'],\n",
+       "       'tpp_ld', 'tree_ht_live', 'tree_ht_dead', 'tree_dia_live',\n",
+       "       'tree_dia_dead', 'H_ba', 'H_tpp', 'qmd_live', 'ba_live_total',\n",
+       "       'ba_dead_total', 'tpp_live_total', 'tpp_dead_total', 'qmd_live_mean',\n",
+       "       'tree_ht_live_mean', 'tree_ht_dead_mean', 'tree_dia_live_mean',\n",
+       "       'tree_dia_dead_mean', 'ba_live_pr', 'tpp_live_pr'],\n",
        "      dtype='object')"
       ]
      },
@@ -808,7 +807,7 @@
       "1  27.233212  143.266123  189.301124  27.759364  \n",
       "2  27.233212  143.266123  189.301124  27.759364  \n",
       "\n",
-      "[3 rows x 99 columns]\n"
+      "[3 rows x 96 columns]\n"
      ]
     }
    ],
@@ -852,23 +851,23 @@
        "Index(['grid_idx', 'fortypnm_gp', 'fortyp_pct', 'forest_pct', 'canopypct_mean',\n",
        "       'balive_sum', 'lf_forest_cc_mean', 'lf_forest_ch_mean', 'species_gp_n',\n",
        "       'tmid_n', 'ba_live', 'ba_dead', 'ba_ld', 'tpp_live', 'tpp_dead',\n",
-       "       'tpp_ld', 'qmd_live', 'qmd_dead', 'qmd_ld', 'tree_ht_live',\n",
-       "       'tree_ht_dead', 'tree_dia_live', 'tree_dia_dead', 'H_ba', 'H_tpp',\n",
-       "       'ba_live_total', 'ba_dead_total', 'tpp_live_total', 'tpp_dead_total',\n",
-       "       'qmd_live_mean', 'qmd_dead_mean', 'tree_ht_live_mean',\n",
-       "       'tree_ht_dead_mean', 'tree_dia_live_mean', 'tree_dia_dead_mean',\n",
-       "       'ba_live_pr', 'tpp_live_pr', 'grid_index', 'grid_area', 'afd_count',\n",
-       "       'unique_days', 'overlap', 'frp_csum', 'frp_max', 'frp_min', 'frp_mean',\n",
-       "       'frp_p90', 'frp_p95', 'frp_p97', 'frp_p99', 'frp_first', 'day_max_frp',\n",
-       "       'dt_max_frp', 'first_obs_date', 'last_obs_date', 't4_max', 't4_mean',\n",
-       "       't5_max', 't5_mean', 'day_count', 'night_count', 'frp_max_day',\n",
-       "       'frp_max_night', 'frp_csum_day', 'frp_csum_night', 'frp_mean_day',\n",
-       "       'frp_mean_night', 'frp_p90_day', 'frp_p90_night', 'frp_p95_day',\n",
-       "       'frp_p95_night', 'frp_p97_day', 'frp_p97_night', 'frp_p99_day',\n",
-       "       'frp_p99_night', 'frp_first_day', 'frp_first_night', 'Fire_ID',\n",
-       "       'Fire_Name', 'geometry', 'x', 'y', 'erc', 'erc_dv', 'fm1000',\n",
-       "       'fm1000_dv', 'rmin', 'rmin_dv', 'tmmx', 'tmmx_dv', 'vpd', 'vpd_dv',\n",
-       "       'vs', 'vs_dv', 'elev', 'slope', 'aspect', 'chili', 'tpi'],\n",
+       "       'tpp_ld', 'tree_ht_live', 'tree_ht_dead', 'tree_dia_live',\n",
+       "       'tree_dia_dead', 'H_ba', 'H_tpp', 'qmd_live', 'ba_live_total',\n",
+       "       'ba_dead_total', 'tpp_live_total', 'tpp_dead_total', 'qmd_live_mean',\n",
+       "       'tree_ht_live_mean', 'tree_ht_dead_mean', 'tree_dia_live_mean',\n",
+       "       'tree_dia_dead_mean', 'ba_live_pr', 'tpp_live_pr', 'grid_index',\n",
+       "       'grid_area', 'afd_count', 'unique_days', 'overlap', 'frp_csum',\n",
+       "       'frp_max', 'frp_min', 'frp_mean', 'frp_p90', 'frp_p95', 'frp_p97',\n",
+       "       'frp_p99', 'frp_first', 'day_max_frp', 'dt_max_frp', 'first_obs_date',\n",
+       "       'last_obs_date', 't4_max', 't4_mean', 't5_max', 't5_mean', 'day_count',\n",
+       "       'night_count', 'frp_max_day', 'frp_max_night', 'frp_csum_day',\n",
+       "       'frp_csum_night', 'frp_mean_day', 'frp_mean_night', 'frp_p90_day',\n",
+       "       'frp_p90_night', 'frp_p95_day', 'frp_p95_night', 'frp_p97_day',\n",
+       "       'frp_p97_night', 'frp_p99_day', 'frp_p99_night', 'frp_first_day',\n",
+       "       'frp_first_night', 'Fire_ID', 'Fire_Name', 'geometry', 'x', 'y', 'erc',\n",
+       "       'erc_dv', 'fm1000', 'fm1000_dv', 'rmin', 'rmin_dv', 'tmmx', 'tmmx_dv',\n",
+       "       'vpd', 'vpd_dv', 'vs', 'vs_dv', 'elev', 'slope', 'aspect', 'chili',\n",
+       "       'tpi'],\n",
        "      dtype='object')"
       ]
      },
